# geegle

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/algo/: Cargo.toml
crates/algo/src/: bm25.rs  lib.rs  tf_idf.rs  types.rs
src/: lib.rs  main.rs
