[package]
name = "geegle"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["derive"] }
algo = { path = "crates/algo" }

[workspace.lints]
rust = {}

[workspace.lints.clippy]
redundant_clone = "deny"
redundant_closure = "deny"


