[package]
name = "geegle"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
algo = { path = "crates/algo" }
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
colored = "3"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
redundant_clone = "deny"
redundant_closure = "deny"


